--- a/.travis.yml
+++ b/.travis.yml
@@ -20,27 +20,8 @@ matrix:
           packages:
             - g++-5
       env: COMPILER=g++-5
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
-          packages:
-            - clang-3.6
-      env: COMPILER=clang++-3.6
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
-          packages:
-            - clang-3.7
-      env: COMPILER=clang++-3.7
-
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y libopencv-dev
 script:
-  - g++ -Wall -std=c++11 -o testcases test/test.cxx && ./testcases  
+  - $COMPILER -Wall -std=c++11 -o testcase test/test.cxx && ./testcase 
